# newsletterautomation

./: .env.example  .gitignore  CONTRIBUTING.md  GITHUB_READY.md  GITHUB_SECRETS.md  INSTALLATION.md  LICENSE  NOTEBOOKLM_SETUP.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_GENERIC.md  email_sources.txt  pyproject.toml  requirements.txt  setup.py  test_notebooklm.py
.gitea/workflows/: newsletter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: newsletter.yml
config/: config.example.py  prompts.example.yaml  prompts.yaml
data/input/: .gitkeep
data/output/: .last_run.json  README.md
src/: __init__.py
src/newsletter_automation/: __init__.py  credentials.example.json  healthcare_watch_runner.py  newsletter_automation.py
